<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="signinViewModel"
    type="com.smf.events.ui.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        tools:context=".signup.SignUp"
    android:orientation="vertical"
    android:padding="20dp">

        <LinearLayout
            android:id="@+id/signinLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:text="@string/signin"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/signinLayout"
        android:id="@+id/numberlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mobile" />
    </LinearLayout>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/numberlayout"
        android:id="@+id/phnumerlayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@drawable/shapes"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">

        <com.hbb20.CountryCodePicker
            android:id="@+id/cppSignIn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:ccp_autoDetectCountry="true"
            android:gravity="center"
            app:ccp_textSize="14sp"
            app:ccpDialog_backgroundColor="@color/white"
            app:ccp_arrowColor="@color/black"
            app:ccp_arrowSize="80dp"
            app:ccpDialog_textColor="@color/buttoncolor"
            app:ccp_showNameCode="true"/>
        <TextView
            android:gravity="center"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/colonen" />

        <EditText
            android:id="@+id/editTextMobileNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/buttoncolor"
            android:hint="@string/phonenumber"
            android:maxLength="10"
            android:inputType="numberDecimal"
            android:autofillHints="123456789" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/phnumerlayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/or"
            android:gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <LinearLayout
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/phnumerlayout"
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emailid" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/mailidLayout"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:background="@drawable/shapes">
        <EditText
            android:id="@+id/editTextEmail"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:hint="@string/perter_gmail_com"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@gmail" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/signinbtnlayout"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/mailidLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <Button
            android:id="@+id/signinbtn"
            android:backgroundTint="@color/buttoncolor"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sign_in"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/signinbtnlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/new_user"

            />
        <TextView
            android:layout_weight="1"
        android:id="@+id/signupaccbtn"
        android:layout_gravity="center"
        android:gravity="start"
            android:textColor="@color/lightblue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            android:text="@string/sign_upsmall"
        />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>