<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Otp.PhoneOTPFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingStart="20dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/otp_verification"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textColor="#902E2E2E"
            android:text="@string/please_enter_your_verification_code_sent_your_email_id_and_mobile"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:text="@string/enter_otp_sent_to_your_number"
            />

        <com.chaos.view.PinView
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:inputType="number"
            app:hideLineWhenFilled="false"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="10dp"
            app:itemSpacing="20dp"
            app:itemWidth="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineWidth="1dp">

        </com.chaos.view.PinView>
        <LinearLayout
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_expries_in"
                />
            <TextView
                android:id="@+id/otp_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_30"
                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/did_t_receive_otp"
            />
        <TextView
            android:id="@+id/otp_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resend"
            android:paddingStart="20dp"
            android:textColor="@color/lightblue"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>