<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="otpviewmodel"
            type="com.smf.events.ui.emailotp.EmailOTPViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".ui.emailotp.EmailOTPFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/size_20dp"
        android:paddingEnd="@dimen/size_20dp"
        android:paddingTop="@dimen/size_40dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/size_22sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/please_enter_your_verification_code_sent_your_email"
                    android:textColor="#902E2E2E"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/size_18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/size_5dp"
                android:layout_marginTop="@dimen/size_50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/enter_otp_sent_to_your_email"
                    android:textSize="@dimen/size_20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.chaos.view.PinView
                    android:id="@+id/otpemail"
                    style="@style/PinWidget.PinView"
                    android:text="@={otpviewmodel.userOtpNumber}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:cursorVisible="true"
                    android:inputType="number"
                    app:hideLineWhenFilled="false"
                    app:itemCount="4"
                    app:itemHeight="@dimen/size_50dp"
                    app:itemRadius="@dimen/size_10dp"
                    app:itemSpacing="@dimen/size_20dp"
                    app:itemWidth="@dimen/size_50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lineWidth="1dp">

                </com.chaos.view.PinView>

            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/size_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/otp_expries_in" />

                <TextView
                    android:id="@+id/otp_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/_00_30" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/did_t_receive_otp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/otp_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Resend"
                    android:textColor="@color/lightblue" />
            </LinearLayout>


        </LinearLayout>

        <Button

            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/size_100dp"
            android:backgroundTint="@color/buttoncolor"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>