<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="verificationCodeViewModel"
            type="com.smf.events.ui.verificationcode.VerificationCodeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.verificationcode.VerificationCodeFrgment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:paddingStart="20dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/otp_verification"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="#902E2E2E"
                android:text="@string/please_enter_your_verification_code_sent_your_email_id_and_mobile"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:padding="25dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="@string/enter_otp_sent_to_your_number"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center">

                <com.chaos.view.PinView
                    android:id="@+id/verificationCode"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:cursorVisible="true"
                    android:inputType="number"
                    app:hideLineWhenFilled="false"
                    app:itemCount="6"
                    app:itemHeight="50dp"
                    app:itemRadius="10dp"
                    app:itemSpacing="20dp"
                    app:itemWidth="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lineWidth="1dp">

                </com.chaos.view.PinView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="35dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otp_expries_in"
                    />
                <TextView
                    android:id="@+id/otp_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_30"
                    />
            </LinearLayout>
            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/did_t_receive_otp" />

            <TextView
                android:id="@+id/otp_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Resend"
                android:paddingStart="20dp"
                android:textColor="@color/lightblue"/>

        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/submit"
            android:backgroundTint="@color/buttoncolor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.80">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
